--- a/ImageColorEditor/META-INF/plugin.xml
+++ b/ImageColorEditor/META-INF/plugin.xml
@@ -1,28 +1,48 @@
-<idea-plugin version="3">
-  <id>com.yourcompany.unique.plugin.id</id>
-  <name>Image Color Editor</name>
-  <version>1.1</version>
+<idea-plugin version="9">
+  <id>com.fissionlabs</id>
+  <name>Android Icon Editor</name>
+  <version>1.4</version>
   <vendor email="support@yourcompany.com" url="http://www.fissionlabs.com">FissionLabs</vendor>
 
   <description><![CDATA[
-      Using this you can change selected image color to any color.<br>
-      1. Add or Drag image to image area.<br>
-      2. And then click anywhere on image to get that color of the pixel.<br>
+  <b>Edit Color:</b>
+      Using this you can change selected icon color to any color.<br>
+      1. Add or Drag icon to image area.<br>
+      2. And then click anywhere on icon to get that color of the pixel.<br>
       3. Now enter color you want to replace with.<br>
       4. Or you can set color using color chooser also.<br>
-      5. Repeat steps 2,3,4 until you get the image in required colors.<br><br>
+      5. Repeat steps 2,3,4 until you get the icon in required colors.<br>
+      6. If you not satisfied with the changes just click Reset button and try again.<br>
+      7. To save your changes open File menu and click Save.<br>
       <b>NOTE:</b>
       <br>
-      Some times some pixles are in still old color, this will make your image dirty.<br>
+      Some times some pixels are in still old color, this will make your image dirty.<br>
       So observe carefully before save your image.<br>
-      Click on those pixels and apply color changes.<br>
+      Click on those pixels and apply color changes.<br><br>
+  <b>Edit Size:</b>
+      Using this you can change icon size.<br>
+      1. Add or Drag icon to image area.<br>
+      2. Open Edit menu and click Edit Size.<br>
+      3. Give width and height and click ok button.<br>
+      4. If you not satisfied with the changes just click Reset button and try again.<br>
+      5. To save your changes open File menu and click Save.<br>
+      <b>NOTE:</b>
+      <br>
+      Resizing the small size icon into large size may give blurred icon.<br>
+      So we set limitations for height and width.<br>
 
 
     ]]></description>
 
   <change-notes><![CDATA[
-      Add change notes here.<br>
-      <em>most HTML tags may be used</em>
+     <b>1.4</b><br>
+     1. Added Icon resize functionality.<br>
+     2. Added File and Edit menus in menu bar. <br>
+     3. Move Save button to File menu. <br><br>
+
+     <b>1.3</b><br>
+     Added Android studio in depends list.<br>
+
     ]]>
   </change-notes>
 
@@ -34,6 +54,9 @@
   <!-- uncomment to enable plugin in all products
   <depends>com.intellij.modules.lang</depends>
   -->
+    <depends>com.intellij.modules.java</depends>
+    <depends>org.jetbrains.android</depends>
+
 
   <extensions defaultExtensionNs="com.intellij">
     <!-- Add your extensions here -->
@@ -50,7 +73,7 @@
   <actions>
     <!-- Add your actions here -->
       <action class="com.editor.Home" id="ImageColorEditor"
-              text = "Image Icon Color Editor">
+              text = "Android Icon Editor">
           <add-to-group group-id="NewGroup" anchor="last"/>
       </action>
   </actions>
